STarting karen from the FSU ETD template

--- a/karen.tex
+++ b/karen.tex
@@ -46,7 +46,6 @@
 \input{chapter1.tex}
 %\input chapter2
 %\input chapter3
-
 %\appendix
 %\input appendix1
 
@@ -57,8 +56,11 @@
 % that have been cited with \cite{key} somewhere in the text will
 % be included.
 %\nocite{*}
+% Or individually reference papers you want to include without citation: 
+%\nocite{Vuduc2005}
+
 \bibliographystyle{plain}
-\bibliography{references.bib}
+\bibliography{references}
 
 \input{biography.tex}
 
