--- a/karen.tex
+++ b/karen.tex
@@ -22,6 +22,9 @@
 \committeeperson{Beauxeau D'Claune}{Committee Member}
 \committeeperson{Arlip Zarseeld}{Committee Member}
 
+\input{macros/macros.tex}
+\input{macros/misc_mac.tex}
+
 \begin{document}
 
 \frontmatter
@@ -43,10 +46,9 @@
 
 \mainmatter
 
-\input{chapter1.tex}
-\cite{Bollig2008}
-%\input chapter2
-%\input chapter3
+\input{parallel_gmres.tex} 
+
+
 %\appendix
 %\input appendix1
 
