--- a/parallel_gmres.tex
+++ b/parallel_gmres.tex
@@ -1,3 +1,6 @@
+\chapter{Multi-GPU Preconditioned GMRES}
+
+
 \section{Introduction}
 This handout follows the implementation of my Parallel (Multi-GPU) GMRES algorithm. 
 
