--- a/references.bib
+++ b/references.bib
@@ -2,12 +2,62 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2012-06-11 16:01:12 -0400 
+%% Created for Evan Bollig at 2012-06-28 14:31:15 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Saad1986,
+	Author = {Saad, Youcef; and Schultz, Martin H.},
+	Date-Added = {2012-06-28 14:31:14 -0400},
+	Date-Modified = {2012-06-28 14:31:14 -0400},
+	File = {:Users/bollig/Documents/Mendeley Desktop/Saad, Schultz/1986/SIAM J. Sci. Stat. Comput/Saad, Schultz - 1986 - GMRES A generalized minimal residual algorithm for solving nonsymmetric linear systems.pdf:pdf},
+	Journal = {SIAM J. Sci. Stat. Comput.},
+	Keywords = {conjugate gradient,descent methods,krylor subspaces,minimal,nonsymmetric systems},
+	Number = {3},
+	Pages = {856--869},
+	Title = {{GMRES: A generalized minimal residual algorithm for solving nonsymmetric linear systems.}},
+	Url = {http://www.stat.uchicago.edu/~lekheng/courses/324/saad-schultz.pdf},
+	Volume = {7},
+	Year = {1986},
+	Bdsk-Url-1 = {http://www.stat.uchicago.edu/~lekheng/courses/324/saad-schultz.pdf}}
+
+@book{Saad2003,
+	Author = {Saad, Yousef},
+	Date-Added = {2012-06-28 14:31:14 -0400},
+	Date-Modified = {2012-06-28 14:31:14 -0400},
+	Edition = {Second},
+	Publisher = {Society for Industrial Mathematics},
+	Title = {Iterative Methods for Sparse Linear Systems},
+	Url = {http://www.stanford.edu/class/cme324/saad.pdf},
+	Year = {2003},
+	Bdsk-Url-1 = {http://www.stanford.edu/class/cme324/saad.pdf}}
+
+@techreport{Dekker2000,
+	Address = {Delft, The Netherlands},
+	Author = {Dekker, K},
+	Date-Added = {2012-06-28 14:30:38 -0400},
+	Date-Modified = {2012-06-28 14:30:38 -0400},
+	File = {:Users/bollig/Documents/Mendeley Desktop/Dekker/2000/Unknown/Dekker - 2000 - Parallel GMRES and Domain Decomposition.pdf:pdf},
+	Institution = {Delft University of Technology},
+	Title = {{Parallel GMRES and Domain Decomposition}},
+	Url = {http://repository.tudelft.nl/assets/uuid:a72c186c-c727-4148-961e-92fb42f330fe/dekker-parrallel2000-00-05.pdf},
+	Year = {2000},
+	Bdsk-Url-1 = {http://repository.tudelft.nl/assets/uuid:a72c186c-c727-4148-961e-92fb42f330fe/dekker-parrallel2000-00-05.pdf}}
+
+@inproceedings{Bahi2011,
+	Author = {Jacques M. Bahi and Rapha{\"e}l Couturier and Lilia Ziane Khodja},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Booktitle = {SpringSim (HPC)},
+	Crossref = {SpringSim2011},
+	Date-Added = {2012-06-28 14:30:30 -0400},
+	Date-Modified = {2012-06-28 14:30:30 -0400},
+	Ee = {http://dl.acm.org/citation.cfm?id=2048579},
+	Pages = {12-19},
+	Title = {Parallel GMRES implementation for solving sparse linear systems on GPU clusters},
+	Year = {2011}}
 
 @manual{BoostSite,
 	Date-Added = {2012-06-11 15:59:20 -0400},
