Got a streamlined version without the frontmatter. I will uncomment and double check all of the fluff later.

--- a/karen.tex
+++ b/karen.tex
@@ -43,23 +43,23 @@
 
 \begin{document}
 
-\frontmatter
-\maketitle
-\makecommitteepage
-
-\input{dedication.tex}
-\input{acknowledgments.tex}
-
-\tableofcontents
-\listoftables
-\listoffigures
-\listofalgorithms
-%\listofmusex
-
-\input{symbols.tex}
-\input{abbreviations.tex}
-
-\input{abstract.tex}
+%% UNCOMMENT THIS FOR ETD CLEARANCE
+%\frontmatter
+%\maketitle
+%\makecommitteepage
+%
+%\input{dedication.tex}
+%\input{acknowledgments.tex}
+%
+%\tableofcontents
+%\listoftables
+%\listoffigures
+%\listofalgorithms
+%
+%\input{symbols.tex}
+%\input{abbreviations.tex}
+%
+%\input{abstract.tex}
 
 \mainmatter
 
