Geenrating an outline to flesh out

--- a/karen.tex
+++ b/karen.tex
@@ -22,7 +22,7 @@
 \college{College of Arty Science}
 \department{Department of Scientific Computing} % Delete if no department
 \manuscripttype{Dissertation}                    % [Thesis, Dissertation, Treatise]
-\degree{Doctorate of Science}                 
+\degree{Doctor of Philosophy}                 
 \semester{Fall}                          % [Spring, Summer, Fall]
 \degreeyear{2012}
 \defensedate{October 1, 2012}
@@ -63,6 +63,10 @@
 
 \mainmatter
 
+\input{introduction.tex} 
+\input{grid_generation.tex}
+\input{parabolic_equations.tex}
+\input{hyperbolic_equations.tex}
 \input{parallel_gmres.tex} 
 
 
