Alright, going to import paper1

--- a/stokesflow.tex
+++ b/stokesflow.tex
@@ -7,4 +7,5 @@
         \item check error for T1 and T2 as a function of epsilon
         \item Give average convergence rate for stencil sizes
     \end{itemize} 
+\item interleaved vs grouped solution conditioning
 \end{itemize} 
