Got some post-its on the wall for topics to discuss

--- a/karen.tex
+++ b/karen.tex
@@ -77,7 +77,7 @@
 \chapter{Research Methodology}
 \begin{itemize} 
 	\item Research Perspective: type of methodology and why it is the best way to answer your research question
-	\item Context and Access: where, when, and how you will ﬁnd par(cipants 
+	\item Context and Access: where, when, and how you will ﬁnd participants 
  	\item Instrumentation: include copy in appendix or in text if using survey or interview questions
  	\item Procedure: be specific so a reader could imitate your study 
  	\item Data Analysis: again, specific down to the computer program used for statistics
