--- a/macros/macros.tex
+++ b/macros/macros.tex
@@ -1,13 +1,3 @@
-\usepackage[usenames,dvipsnames]{color}
-%\usepackage[english]{babel}
-\usepackage{tabularx}
-\usepackage{soul}
-\usepackage{xparse}
-\usepackage{listings}
-%\usepackage[normalem]{ulem}
-
-
-
 %%%%%%%%%%%%%%%
 % Show a list of items "todo" or "done" 
 % USAGE: 
@@ -20,53 +10,11 @@
   \let\olditem\item
   \renewcommand\item{\olditem \textcolor{red}{(TODO)}: }
   \newcommand\todo{\olditem \textcolor{red}{(TODO)}: }
-   \newcommand\done{\olditem \textcolor{ForestGreen}{(DONE)}: }
+   \newcommand\done{\olditem \textcolor{forestgreen}{(DONE)}: }
 }{%
   \end{list}
 } 
 %%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%
-% Show a Author's Note
-% USAGE: 
-% \incomplete[Optional footnote message to further clarify note]{The text which is currently not finished}
-\DeclareDocumentCommand \incomplete{ o m }
-{%
-\IfNoValueTF {#1}
-{\textcolor{red}{Incomplete: \ul{#2}}} 
-{\textcolor{red}{Incomplete: \ul{#2}}\footnote{Comment: #1}}%
-}
-%%%%%%%%%%%%%%%
-
-
-
-%%%%%%%%%%%%%%%
-% Show a Author's Note
-% USAGE: 
-% \authnote[Optional footnote message to further clarify note]{The note to your readers}
-\DeclareDocumentCommand \authnote { o m }
-{%
-\IfNoValueTF {#1}
-{\textcolor{blue}{Author's Note: \ul{#2}}} 
-{\textcolor{blue}{Author's Note: \ul{#2}}\footnote{Comment: #1}}%
-}
-%%%%%%%%%%%%%%%
-
-
-
-%%%%%%%%%%%%%%%
-% Strike out text that doesn't belong in the paper
-% USAGE: 
-% \strike[Optional footnote to state why it doesn't belong]{Text to strike out}
-\DeclareDocumentCommand \strike { o m }
-{%
-\setstcolor{Red}
-\IfNoValueTF {#1}
-{\textcolor{Gray}{\st{#2}}} 
-{\textcolor{Gray}{\st{#2}}\footnote{Comment: #1}}%
-}
-%%%%%%%%%%%%%%%
-
 \definecolor{light-gray}{gray}{0.95}
 
 \newcommand{\cbox}[3]{
@@ -77,178 +25,6 @@
 }
 }
 }
-
-% Setup an environment similar to verbatim but which will highlight any bash commands we have
-\lstnewenvironment{unixcmds}[0]
-{
-%\lstset{language=bash,frame=shadowbox,rulesepcolor=\color{blue}}
-\lstset{ %
-language=sh,		% Language
-basicstyle=\ttfamily,
-backgroundcolor=\color{light-gray}, 
-rulecolor=\color{blue},
-%frame=tb, 
-columns=fullflexible,
-%framexrightmargin=-.2\textwidth,
-linewidth=0.8\textwidth,
-breaklines=true,
-%prebreak=/, 
-  prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
-%basicstyle=\footnotesize,       % the size of the fonts that are used for the code
-%numbers=left,                   % where to put the line-numbers
-%numberstyle=\footnotesize,      % the size of the fonts that are used for the line-numbers
-%stepnumber=2,                   % the step between two line-numbers. If it's 1 each line 
-                                % will be numbered
-%numbersep=5pt,                  % how far the line-numbers are from the code
-showspaces=false,               % show spaces adding particular underscores
-showstringspaces=false,         % underline spaces within strings
-showtabs=false,                 % show tabs within strings adding particular underscores
-frame=single,	                % adds a frame around the code
-tabsize=2,	                % sets default tabsize to 2 spaces
-captionpos=b,                   % sets the caption-position to bottom
-breakatwhitespace=false,        % sets if automatic breaks should only happen at whitespace
-}
-} { }
-
-% Setup an environment similar to verbatim but which will highlight any bash commands we have
-\lstnewenvironment{cppcode}[1]
-{
-%\lstset{language=bash,frame=shadowbox,rulesepcolor=\color{blue}}
-\lstset{ %
-	backgroundcolor=\color{light-gray}, 
-	rulecolor=\color[rgb]{0.133,0.545,0.133},
-	tabsize=4,
-	language=[GNU]C++,
-%	basicstyle=\ttfamily,
-        basicstyle=\scriptsize,
-        upquote=true,
-        aboveskip={1.5\baselineskip},
-        columns=fullflexible,
-        %framexrightmargin=-.1\textwidth,
-       %framexleftmargin=6mm,
-        showstringspaces=false,
-        extendedchars=true,
-        breaklines=true,
-        prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
-        frame=single,
-        showtabs=false,
-        showspaces=false,
-        showstringspaces=false,
-        numbers=left,                   % where to put the line-numbers
-	numberstyle=\footnotesize,      % the size of the fonts that are used for the line-numbers
-	stepnumber=4,                   % the step between two line-numbers. If it's 1 each line 
-                                % will be numbered
-	firstnumber=#1,
-         numbersep=5pt,                  % how far the line-numbers are from the code
-        identifierstyle=\ttfamily,
-        keywordstyle=\color[rgb]{0,0,1},
-        commentstyle=\color[rgb]{0.133,0.545,0.133},
-        stringstyle=\color[rgb]{0.627,0.126,0.941},
-}
-} { }
-
-% Setup an environment similar to verbatim but which will highlight any bash commands we have
-\lstnewenvironment{mcode}[1]
-{
-\lstset{ %
-	backgroundcolor=\color{light-gray}, 
-	rulecolor=\color[rgb]{0.133,0.545,0.133},
-	tabsize=4,
-	language=Matlab,
-%	basicstyle=\ttfamily,
-        basicstyle=\scriptsize,
-        upquote=true,
-        aboveskip={1.5\baselineskip},
-        columns=fullflexible,
-        %framexrightmargin=-.1\textwidth,
-       %framexleftmargin=6mm,
-        showstringspaces=false,
-        extendedchars=true,
-        breaklines=true,
-        prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
-        frame=single,
-        showtabs=false,
-        showspaces=false,
-        showstringspaces=false,
-        numbers=left,                   % where to put the line-numbers
-	numberstyle=\footnotesize,      % the size of the fonts that are used for the line-numbers
-	stepnumber=4,                   % the step between two line-numbers. If it's 1 each line 
-                                % will be numbered
-	firstnumber=#1,
-         numbersep=5pt,                  % how far the line-numbers are from the code
-        identifierstyle=\ttfamily,
-        keywordstyle=\color[rgb]{0,0,1},
-        commentstyle=\color[rgb]{0.133,0.545,0.133},
-        stringstyle=\color[rgb]{0.627,0.126,0.941},
-}
-} { }
-
-\newcommand{\inputmcode}[1]{%
-\lstset{ %
-	backgroundcolor=\color{light-gray},  %
-	rulecolor=\color[rgb]{0.133,0.545,0.133}, %
-	tabsize=4, %
-	language=Matlab, %
-%	basicstyle=\ttfamily,
-        basicstyle=\scriptsize, %
-        %        upquote=true,
-        aboveskip={1.5\baselineskip}, %
-        columns=fullflexible, %
-        %framexrightmargin=-.1\textwidth,
-       %framexleftmargin=6mm,
-        showstringspaces=false, %
-        extendedchars=true, %
-        breaklines=true, %
-        prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}}, %
-        frame=single, %
-        showtabs=false, %
-        showspaces=false, %
-        showstringspaces=false,%
-        numbers=left,                   % where to put the line-numbers
-	numberstyle=\footnotesize,      % the size of the fonts that are used for the line-numbers
-	stepnumber=4,                   % the step between two line-numbers. If it's 1 each line 
-                                % will be numbered
-         numbersep=5pt,                  % how far the line-numbers are from the code
-        identifierstyle=\ttfamily, %
-        keywordstyle=\color[rgb]{0,0,1}, %
-        commentstyle=\color[rgb]{0.133,0.545,0.133}, %
-        stringstyle=\color[rgb]{0.627,0.126,0.941} %
-}
-\lstinputlisting{#1}%
-}
-
-%\lstset{ %
-%	backgroundcolor=\color{light-gray}, 
-%	rulecolor=\color[rgb]{0.133,0.545,0.133},
-%	tabsize=4,
-%	language=Matlab,
-%%	basicstyle=\ttfamily,
-%        basicstyle=\scriptsize,
-%        upquote=true,
-%        aboveskip={1.5\baselineskip},
-%        columns=fullflexible,
-%        %framexrightmargin=-.1\textwidth,
-%       %framexleftmargin=6mm,
-%        showstringspaces=false,
-%        extendedchars=true,
-%        breaklines=true,
-%        prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
-%        frame=single,
-%        showtabs=false,
-%        showspaces=false,
-%        showstringspaces=false,
-%        numbers=left,                   % where to put the line-numbers
-%	numberstyle=\footnotesize,      % the size of the fonts that are used for the line-numbers
-%	stepnumber=4,                   % the step between two line-numbers. If it's 1 each line 
-%                                % will be numbered
-%	firstnumber=#1,
-%         numbersep=5pt,                  % how far the line-numbers are from the code
-%        identifierstyle=\ttfamily,
-%        keywordstyle=\color[rgb]{0,0,1},
-%        commentstyle=\color[rgb]{0.133,0.545,0.133},
-%        stringstyle=\color[rgb]{0.627,0.126,0.941},
-%}
-
 
 \newcommand{\Laplacian}[1]{\nabla^2 #1}
 
@@ -267,12 +43,6 @@ breakatwhitespace=false,        % sets if automatic breaks should only happen at
 \newcommand{\toprule}[0]{\hline}
 \newcommand{\midrule}[0]{\hline\hline}
 \newcommand{\bottomrule}[0]{\hline}
-
-\newcolumntype{C}{>{\centering\arraybackslash}b{1in}}
-\newcolumntype{L}{>{\flushleft\arraybackslash}b{1.5in}}
-\newcolumntype{R}{>{\flushright\arraybackslash}b{1.5in}}
-\newcolumntype{D}{>{\flushright\arraybackslash}b{2.0in}}
-\newcolumntype{E}{>{\flushright\arraybackslash}b{1.0in}}
 
 \DeclareSymbolFont{AMSb}{U}{msb}{m}{n}
 \DeclareMathSymbol{\N}{\mathbin}{AMSb}{"4E}
@@ -312,9 +82,6 @@ breakatwhitespace=false,        % sets if automatic breaks should only happen at
 %      \vrule height0.75em width0.5em depth0.25em\fi}
 %%%%%%%%%%%%%%%%%%%%%%
 
-%
-%\usepackage[algochapter]{algorithm2e}
-%\usepackage[usenames]{color}
 % colors to show the corrections
 \newcommand{\red}[1]{\textbf{\textcolor{red}{#1}}}
 \newcommand{\blue}[1]{\textbf{\textcolor{blue}{#1}}}
@@ -332,9 +99,9 @@ breakatwhitespace=false,        % sets if automatic breaks should only happen at
 %\newcommand{\togordon}[1]{\textbf{\blue{*** Gordon: #1 ***}}}
 \renewcommand{\ge}[3]{{\textcolor{blue}{*** \textbf{Gordon:}\strike{#1} #2 ***}}\red{(#3)}}
 \renewcommand{\ge}[3]{{\textcolor{blue}{#2}}}
-\renewcommand{\ge}[3]{{\textcolor{Red}{#2}}}
-\newcommand{\eb}[3]{{\textcolor{Red}{*** \textbf{Evan:}\strike{#1} #2 ***}}\red{(#3)}}
-\renewcommand{\eb}[3]{{{\textcolor{Red}{#2}}}}
+\renewcommand{\ge}[3]{{\textcolor{red}{#2}}}
+\newcommand{\eb}[3]{{\textcolor{red}{*** \textbf{Evan:}\strike{#1} #2 ***}}\red{(#3)}}
+\renewcommand{\eb}[3]{{{\textcolor{red}{#2}}}}
 %\def\ge#1#2#3{}{\textbf{\blue{*** Gordon: #2 ***}}}{(#3)}
 \newcommand{\gee}[1]{{\bf{\blue{{\em #1}}}}}
 \newcommand{\old}[1]{}
