Testing to see if I can use multiple bib files. It would make life a little easier until I reformat the ref list

--- a/karen.tex
+++ b/karen.tex
@@ -129,8 +129,8 @@
 % Or individually reference papers you want to include without citation: 
 %\nocite{Vuduc2005}
 
-%\bibliographystyle{plain}
-%\bibliography{paper1_references}
+\bibliographystyle{plain}
+\bibliography{paper1_references}
 
 %\input{biography.tex}
 
