Starting to integrate the paper into the dissertation

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,6 +1,6 @@
+%!TEX root =  karen.tex
+
 \chapter{Introduction}
-%!TEX root =  paper_draft.tex
-%\IEEEPARstart{O}{f}
 
 \section{Introduction}
 \label{sec:intro}
